--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
+
+password.expiry.days = 90 
