--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
 password.expiry.days = 90 
+
+security.basic.enable: false
+security.ignored=/**
