spring security commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,5 @@ spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
-password.expiry.days = 90 
-
-security.basic.enable: false
-security.ignored=/**
+password.expiry.days = 90
+logging.level.web= DEBUG
