--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-
-password.expiry.days = 90
-logging.level.web= DEBUG
-
-enableLoggingRequestDetails = true
+password.expiry.days=90
+password.expiry.alert.days=60
+logging.level.web=DEBUG
+enableLoggingRequestDetails=true
