--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ password.expiry.days=90
 password.expiry.alert.days=60
 logging.level.web=DEBUG
 enableLoggingRequestDetails=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
