--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=springsecurity
 #spring.security.user.name=admin
 #spring.security.user.password=admin@123
 # Use one of create/update/create-update
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #If your MySql version 5 then use MySQL5Dialect
 # Enable spring data repos
 spring.data.jpa.repositories.enabled=true
@@ -27,3 +27,22 @@ spring.app.jwtExpirationMs=3000000
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.example.springsecurity=DEBUG
+
+#spring.datasource.url=jdbc:h2:mem:springsecurity
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Using SID
+spring.datasource.url= jdbc:oracle:thin:@localhost:1522:ORCL2?createDatabaseIfNotExist=true
+spring.datasource.username=SYSTEM   
+spring.datasource.password=root
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+#hibernate configs
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto= update 
+
+
+
