--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-       <!--<dependency>
+        <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc11</artifactId>
@@ -94,11 +94,11 @@
             <version>0.12.5</version>
             <scope>runtime</scope>
         </dependency>
-       <!-- <dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
