--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,35 @@
 spring.application.name=springsecurity
 password.regex=^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@.#$%^&*])[a-zA-Z0-9!@.#$%^&*]{8,15}
 
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+################# ORACLE DB ############################
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1522:ORCL2
+#spring.datasource.username=SYSTEM
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+##hibernate configs
+#spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+################# ORACLE DB ############################
+
+spring.security.user.name = admin
+spring.security.user.password = admin@123
+
+
+
+
+############### Mysql DB ############################
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+############### Mysql DB ############################
